fix(header): :lipstick: fix round button dark mode hover color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .btn-round {
-    @apply hover:transition-colors hover:bg-white/20 p-2 rounded-full focus:outline-none focus:ring-2 focus:border-primary-500 focus:ring-inset duration-300 focus:ring-primary-500;
+    @apply hover:transition-colors dark:hover:bg-white/20 hover:bg-gray-950/10 p-2 rounded-full focus:outline-none focus:ring-2 focus:border-primary-500 focus:ring-inset duration-300 focus:ring-primary-500;
   }
   hr {
     @apply h-px dark:border-gray-950 border-gray-200 py-2;
